# podstawy-programowania

./: .gitignore  CMakeLists.txt  README.md
0_ChatGPT/: README.md  wstaw_do_drzewa_binarnego.c
0_testy/: chess_dsc.c  remove_first_n_string_chars.c  reverse_size_t_iteration.c  test.c  tictactoe_any_size_temp.c  tictactoe_any_size_temp_old_check.c
0_z_wykladu/: chess.c  tictactoe.c  tictactoe_upgraded.c
1/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
10/: chess.c
2/: 1.c  10_liczba_wystapien_znaku.c  2_strcpy.c  3_strlen.c  4_strcat.c  5_strcmp.c  6_funkcje.c  7_wyszukiwanie_elementu.c  8_macierze.c  9_szukanie_wzorca_w_tekscie.c
3/: 10_zamiana_kolejnosci_wyrazow.c  10_zamiana_kolejnosci_znakow.c  11_zamiana_kolejnosci_wyrazow.c  1_wskazniki.c  2_tablice.c  3.c  4.c  5.c  6_wielokrotne.c  7_and_or.c  8_macierze.c  9_liter_male_na_duze.c
4/: 1_fibonacci.c  2_tictactoe_checker.c  3_tictactoe.c  4_tictactoe_any_size.c
5/: chess.c
6/: 1_wsk_do_fun.c  2_wsk_do_fun_w_arg_fun.c  3_tab_wsk_do_fun.c  4_list3.c  4_struct.c  4_struct2.c
7/: 1_list.c  2_tree.c
8/: 10_blok.c  1_fprintf.c  2_fprintf_tabliczka_mnozenia.c  3_fputc.c  4_fgetc.c  5_fscanf_odczyt_tabliczki_mnozenia.c  6_fwrite.c  7_fwrite_student.c  8_fread.c  9_fseek.c
9/: 1.c  1_windows.c  2.c
9/1_chat/: klient.c  serwer.c
9/2_przesylanie_plikow/klient/: klient.c
9/2_przesylanie_plikow/serwer/: plik2.txt  plik_testowy.txt  serwer.c
9/3_chess/: chess.c  klient.c
